<resources>
    <string name="app_name">MyKotlinStudy</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="toutiao">头条新闻</string>
    <string name="tag_toutiao_fragment">toutiaoFragment</string>
    <string name="wechat">微信精选</string>
    <string name="tag_wechat_fragment">wechatFragment</string>
    <string name="smile">轻松一刻</string>
    <string name="tag_yike_fragment">yikeFragment</string>
    <string name="zhihu">知乎日报</string>
    <string name="tag_zhihu_fragment">zhihuFragment</string>
    <string name="setting">设置</string>
    <string name="shareapp">推荐给朋友</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yike_share_img">yike_share_img</string>
    <string name="zhihu_share_img">zhihu_share_img</string>

</resources>
