<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_toutiao"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/toutiao"
            android:checked="true"/>
        <item
            android:id="@+id/nav_wechat"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/wechat" />
        <item
            android:id="@+id/nav_smile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/smile" />
        <item
            android:id="@+id/nav_zhihu"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/zhihu" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/shareapp" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/setting" />
        </menu>
    </item>

</menu>
